# nos-v2

./: .gitignore  Commands.txt  LICENSE  Makefile  NeuronOS.md  NeuronOS_Technical_Guide.md  README.md  pyproject.toml  requirements.txt  setup.sh
neuronos-docs/: README.md
neuronos-docs/developer-guide/: architecture.md
neuronos-docs/user-guide/: installation.md
neuronos-hardware/: README.md  setup.py
neuronos-hardware/data/: hardware_db.yaml
neuronos-hardware/neuron_hw/: __init__.py  cli.py  compatibility.py  detect.py  models.py  vfio_config.py
neuronos-hardware/systemd/: neuron-hw-check.service
neuronos-hardware/tests/: __init__.py  test_detect.py
neuronos-installer/: README.md  settings.conf
neuronos-installer/branding/neuronos/: show.qml
neuronos-installer/modules/neuronbtrfs/: main.py  module.desc
neuronos-installer/modules/neuronhwdetect/: module.desc
neuronos-installer/modules/neuronpostinstall/: main.py  module.desc
neuronos-installer/modules/neuronvfio/: main.py
neuronos-iso/: README.md  packages.x86_64  pacman.conf  profiledef.sh
neuronos-iso/.github/workflows/: build-iso.yml
neuronos-iso/airootfs/etc/: group  passwd
neuronos-iso/airootfs/etc/sddm.conf.d/: autologin.conf
neuronos-iso/airootfs/etc/tmpfiles.d/: looking-glass.conf  scream-ivshmem.conf
neuronos-iso/airootfs/root/: .automated_script.sh
neuronos-single-gpu/: README.md
neuronos-single-gpu/hooks/: qemu
neuronos-single-gpu/scripts/: common.sh  gpu-recovery-check.sh  gpu-switch-to-host.sh  gpu-switch-to-vm.sh
neuronos-single-gpu/systemd/: neuron-gpu-recovery.service
neuronos-vm-manager/: README.md  setup.py
neuronos-vm-manager/data/: app_database.yaml  vm-setup.py  win11-neuron.xml
neuronos-vm-manager/neuronvm/: __init__.py  app_router.py  cli.py  config.py  desktop_entry.py  download_monitor.py  launcher.py  lifecycle.py  looking_glass.py
upstream-calamares/src/branding/neuronos/: branding.desc
upstream-looking-glass/repos/LGMP/: LGMP.vcxproj  LGMP.vcxproj.filters  lgmp.sln
(+22 files in other folders)
